src/_scss/pages/history/history.scss
.usa-da-history-page {
	@import "../../layouts/content/content";
	@include contentLayout;

	@import "../../components/alerts/_alerts";
	.alert-danger {
		@include dangerAlert;
	}
	.alert-warning {
		@include warningAlert;
	}

    .trash-icon{
		cursor: pointer;
	}

	.trash-link:hover{
        text-decoration: none;
        cursor: pointer;
    }

    ul, submission_list {
    	display: block;
    	list-style: none;
    	list-style-type: none;
    }

    .file-link {
    	cursor: pointer;
    	font-size: 2rem;
    }
    .file-link:hover {
    	cursor: pointer;
    }

    .active-submission {
    	display: block;
    	background-color: #323A45;
    	color: white;
    	border-radius: 5px;
    	font-size: 2rem;
    	list-style-type: none;
    	padding: 10px;
    	list-style: none;
    }

    .submission {
    	font-size:2rem;
    	padding: 10px;
    	cursor:pointer;
	}


	li:before {
		content: '';
	}

    .submission-list {
    	list-style: none;
    	list-style-type: none;
    	display: block;
    }

    .metadata {
    	margin-bottom: 5px;
    }

    .header {
    	padding-top:1.5rem;
    	font-size: 1.5rem;
    }

    .download-box {
    	border: solid 1px #323A45;
    	min-height:300px;
    }

    .header {
    	font-weight: 200;
    }

    .download-header {
    	font-size:4rem;
    }

    .cert-header {
    	font-size:6rem;
    }

}

